# ticX

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
db/: Cargo.toml
db/src/: dbo.rs  errors.rs  lib.rs  schema.rs
migrations/: 20210930134545_init.sql
migrations.20211015/: 20210930134545_init.sql
migrations/2021-10-15-144358_create_users/: up.sql
migrations/2021-10-15-144452_create_tickets/: up.sql
migrations/2021-10-15-144542_add_pgcrypto/: down.sql  up.sql
src/: app.rs  errors.rs  main.rs  metrics.rs  schema.rs  tracer.rs
src/server/: middlewares.rs  mod.rs
src/server/routes/: auth.rs  metrics.rs  mod.rs  tests.rs  ticket.rs  token.rs  user.rs
