[package]
name = "ticx"
version = "0.1.0"
authors = ["Vilém Pavlíček <pavlicek@cngroup.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "db"
]

[dependencies]
actix-web = { version = "3.3.2" }

thiserror = "1.0.29"

opentelemetry = "0.16.0"

tracing = "0.1.28"
tracing-appender = "0.1.2"
tracing-subscriber = { version = "0.2.24", features = ["tracing-log"] }
tracing-opentelemetry = "0.15.0"

serde = { version = "1.0.130", features = ["derive"] }
opentelemetry-zipkin = "0.14.0"
actix-web-opentelemetry = "0.10.0"

jsonwebtoken = "7.2.0"

db = {path = "./db"}

dotenv = "0.15.0"

futures = "0.3.17"
http-auth-basic = "0.3.1"
chrono = "0.4.19"
