[package]
name = "db"
version = "0.1.0"
authors = ["Vilém Pavlíček <pavlicek@cngroup.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }

thiserror = "1.0.29"
chrono = "0.4.19"

tracing = "0.1.28"